--- a/references.bib
+++ b/references.bib
@@ -25,3 +25,30 @@
   publisher={JSTOR}
 }
 
+@article{raiffaapplied,
+  title={Applied Statistical Decision Theory, Division of Research, GraduateSchool of Business Administration, Harvard University, Boston, 1961},
+  author={Raiffa, Howard and Schlaifer, Robert},
+  journal={RaiffaApplied Statistical Decision Theory1961}
+}
+
+@book{box2011bayesian,
+  title={Bayesian inference in statistical analysis},
+  author={Box, George EP and Tiao, George C},
+  volume={40},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
+
+@book{robert2013monte,
+  title={Monte Carlo statistical methods},
+  author={Robert, Christian and Casella, George},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{moraga2019geospatial,
+  title={Geospatial health data: Modeling and visualization with R-INLA and shiny},
+  author={Moraga, Paula},
+  year={2019},
+  publisher={CRC Press}
+}
